update product card css to stop text from being cut off

--- a/E-commerce website/wwwroot/css/home.css
+++ b/E-commerce website/wwwroot/css/home.css
@@ -51,7 +51,7 @@
 .product-card {
     flex: 0 0 auto;
     width: 250px;
-    height: 450px;
+    height: 475px; /*updated from 450px 4/24/23*/
     margin-right: 40px;
 }
 
